--- a/src/ProjectEuler.Tests/ProjectEuler.Tests.csproj
+++ b/src/ProjectEuler.Tests/ProjectEuler.Tests.csproj
@@ -50,6 +50,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MultiplesOf3And5_Sum_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
