--- a/src/ProjectEuler/ProjectEuler.csproj
+++ b/src/ProjectEuler/ProjectEuler.csproj
@@ -34,6 +34,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EvenFibonacciNumbers.cs" />
     <Compile Include="MultiplesOf3And5.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
