--- a/src/ProjectEuler.Tests/ProjectEuler.Tests.csproj
+++ b/src/ProjectEuler.Tests/ProjectEuler.Tests.csproj
@@ -56,7 +56,9 @@
     <Compile Include="Problem0003_LargestPrimeFactor_Find_Test.cs" />
     <Compile Include="Problem0004_LargestPalindromeProduct_Find_Test.cs" />
     <Compile Include="Problem0004_LargestPalindromeProduct_IsPalindrome_Test.cs" />
+    <Compile Include="Problem0005_SmallestMultiple_Find_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Problem0005_SmallestMultiple_FindPrimeFactors_Test.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ProjectEuler\ProjectEuler.csproj">
