--- a/src/ProjectEuler.Tests/ProjectEuler.Tests.csproj
+++ b/src/ProjectEuler.Tests/ProjectEuler.Tests.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Problem0004_LargestPalindromeProduct_Find_Test.cs" />
     <Compile Include="Problem0004_LargestPalindromeProduct_IsPalindrome_Test.cs" />
     <Compile Include="Problem0005_SmallestMultiple_Find_Test.cs" />
+    <Compile Include="Problem0006_SumSquareDifference_Find_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Problem0005_SmallestMultiple_FindPrimeFactors_Test.cs" />
   </ItemGroup>
