--- a/src/ProjectEuler.Tests/ProjectEuler.Tests.csproj
+++ b/src/ProjectEuler.Tests/ProjectEuler.Tests.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Problem0007_Prime_Find_Test.cs" />
     <Compile Include="Problem0008_LargestProductInASeries_Find_Test.cs" />
     <Compile Include="Problem0009_SpecialPythagoreanTriplet_FindProduct_Test.cs" />
+    <Compile Include="Problem0010_SummationOfPrimes_Find_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Problem0005_SmallestMultiple_FindPrimeFactors_Test.cs" />
   </ItemGroup>
