--- a/src/ProjectEuler/ProjectEuler.csproj
+++ b/src/ProjectEuler/ProjectEuler.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Problem0005_SmallestMultiple.cs" />
     <Compile Include="Problem0006_SumSquareDifference.cs" />
     <Compile Include="Problem0009_SpecialPythagoreanTriplet.cs" />
+    <Compile Include="Problem0010_SummationOfPrimes.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
