--- a/src/ProjectEuler.Tests/ProjectEuler.Tests.csproj
+++ b/src/ProjectEuler.Tests/ProjectEuler.Tests.csproj
@@ -62,6 +62,8 @@
     <Compile Include="Problem0008_LargestProductInASeries_Find_Test.cs" />
     <Compile Include="Problem0009_SpecialPythagoreanTriplet_FindProduct_Test.cs" />
     <Compile Include="Problem0010_SummationOfPrimes_Find_Test.cs" />
+    <Compile Include="Problem0012_HighlyDivisibleTriangularNumber_FindDivisors_Test.cs" />
+    <Compile Include="Problem0012_HighlyDivisibleTriangularNumber_Find_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Problem0005_SmallestMultiple_FindPrimeFactors_Test.cs" />
   </ItemGroup>
