--- a/src/ProjectEuler.Tests/ProjectEuler.Tests.csproj
+++ b/src/ProjectEuler.Tests/ProjectEuler.Tests.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Problem0010_SummationOfPrimes_Find_Test.cs" />
     <Compile Include="Problem0012_HighlyDivisibleTriangularNumber_FindDivisors_Test.cs" />
     <Compile Include="Problem0012_HighlyDivisibleTriangularNumber_Find_Test.cs" />
+    <Compile Include="Problem0013_LargeSum_FindFirstTenDigitsOfSum_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Problem0005_SmallestMultiple_FindPrimeFactors_Test.cs" />
   </ItemGroup>
