--- a/src/ProjectEuler/ProjectEuler.csproj
+++ b/src/ProjectEuler/ProjectEuler.csproj
@@ -34,6 +34,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Problem0014_LongestCollatzSequence.cs" />
     <Compile Include="Problem0013_LargeSum.cs" />
     <Compile Include="Problem0012_HighlyDivisibleTriangularNumber.cs" />
     <Compile Include="Problem0008_LargestProductInASeries.cs" />
