Solve problem 15: Lattice path.

--- a/src/ProjectEuler.Tests/ProjectEuler.Tests.csproj
+++ b/src/ProjectEuler.Tests/ProjectEuler.Tests.csproj
@@ -50,6 +50,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Problem0015_LatticePath_Count_Test.cs" />
     <Compile Include="Problem0002_EvenFibonacciNumbers_FindFibonacciSequence_Test.cs" />
     <Compile Include="Problem0002_EvenFibonacciNumbers_SumOfEvenNumbers_Test.cs" />
     <Compile Include="Problem0001_MultiplesOf3And5_Sum_Test.cs" />
