--- a/src/ProjectEuler/ProjectEuler.csproj
+++ b/src/ProjectEuler/ProjectEuler.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Problem0003_LargestPrimeFactor.cs" />
     <Compile Include="Problem0002_EvenFibonacciNumbers.cs" />
     <Compile Include="Problem0001_MultiplesOf3And5.cs" />
+    <Compile Include="Problem0015_LatticePath.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Problem0005_SmallestMultiple.cs" />
     <Compile Include="Problem0006_SumSquareDifference.cs" />
