--- a/src/ProjectEuler.Tests/ProjectEuler.Tests.csproj
+++ b/src/ProjectEuler.Tests/ProjectEuler.Tests.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Problem0013_LargeSum_FindFirstTenDigitsOfSum_Test.cs" />
     <Compile Include="Problem0014_LongestCollatzSequence_FindNumberWithLongestCollatzSequence_Test.cs" />
     <Compile Include="Problem0014_LongestCollatzSequence_FindCollatzSequence_Test.cs" />
+    <Compile Include="Problem0016_PowerDigitSum_Sum_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Problem0005_SmallestMultiple_FindPrimeFactors_Test.cs" />
   </ItemGroup>
